--- a/views/game/instructions.ejs
+++ b/views/game/instructions.ejs
@@ -37,7 +37,7 @@
                 <h5 class="mt-0 mb-1"><u>Combat</u></h5>
                 <p>TFS utilizes a turn-based, side-view combat system. A character's agility stat is used to determine who will act first during any round of combat. When engaged in battle, a hero has several options...</p>
                 <ul>
-                    <li><b>Fight: </b>A hero will attack with their equipped weapon, dealing damage to the enemy selected.</li>
+                    <li><b>Attack: </b>A hero will attack with their equipped weapon, dealing damage to the enemy selected.</li>
                 </ul>
             </div>
         </li>
