update landing page to be more mobile friendly

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,17 +2,14 @@
 <html lang="en">
 
 <% include ./partials/head %>
-<link rel="stylesheet" type="text/css" href="/stylesheets/style-title.css">
-    
 
 <body>
-    <div id="app">
-        <a href="/home"><img id="titleImg" src="/images/title-img.jpg" /></a>
-        <div id="titleText">
-            <p>Tales from Swiftfell</p>
-        </div>
+    
+    <div id="main-img-area" class="row" style="height: 100vh;">
+        <a class="mx-auto mt-auto mb-auto" href="/home"><img style="height: 80%; border-radius: 7px;" src="/images/title-img2.jpg"></a>
     </div>
 
-    
+
+<link rel="stylesheet" href="/stylesheets/style-title.css">
 </body>
 </html>
