--- a/views/partials/home-main.ejs
+++ b/views/partials/home-main.ejs
@@ -15,7 +15,7 @@
         <p class="text-center main-font">Team up with other Heros to do battle with powerful creatures, enchanted beats, evil scoundrels, and ancient beings.</p>
     </div>
     <div id="right-sec3">
-        <img src="/images/dragon-battle.jpg" height="65%" class="rounded-pill">
+        <img src="/images/dragon-battle.jpg" height="65%" class="img-fluid rounded-pill">
     </div>
 </div>
 
@@ -60,5 +60,5 @@
     <img src="/images/hero-sec4.jpg" width="50%" class="rounded-pill">
     <br>
     <p class="text-center">Sign up for a FREE account today and start your own adventure in Tales from Swiftfell</p>
-    <a href="/user/signup" class="btn btn-primary" style="width: 10vw;">Sign Up</a>
+    <a id="sign-up-button" href="/user/signup" class="btn btn-primary">Sign Up</a>
 </div>
