--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -12,7 +12,14 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
             </li>
-
+        
+            <li class="nav-item hide-me">
+                <a class="nav-link" href="/user/signin">Sign In</a>
+            </li>
+            <li class="nav-item hide-me">
+                <a class="nav-link" href="user/signup">Sign Up</a>
+            </li>
+                
             <% if (user) { %>
             <li class="nav-item ml-5">
                 <div class="dropdown">
@@ -44,14 +51,7 @@
     
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav ml-auto">
-            <% if (!user) { %>
-            <li class="nav-item">
-                <a href="/user/signup" class='nav-link'>Sign up <span class='sr-only'>(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a href="/user/signin" class='nav-link'>Sign in </a>
-            </li>
-            <% } else {%>
+            <% if (user) { %>
 
             <li class="nav-item">
                 <a href="/user/profile" class='nav-link' style="color: white;">Logged in as <span
