--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,6 +7,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
 
+    <% if (!user) { %>
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
@@ -20,8 +21,8 @@
                 <a class="nav-link" href="user/signup">Sign Up</a>
             </li>
                 
-            <% if (user) { %>
-            <li class="nav-item ml-5">
+    <% } else { %>
+            <div class="d-flex" style="justify-self: start; position: absolute;">
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" style="background-color: rgb(143, 68, 60);;" type="button" id="dropdownMenuButton" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
@@ -33,9 +34,10 @@
                         <a class="dropdown-item" href="/game/messageBoard">Message Boad</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/user/profile">Edit Profile</a>
+                        <a class="dropdown-item" href="/user/logout">Log Out</a>
                     </div>
                 </div>
-            </li>
+            </div>
             <% } %>
 
         </ul>
