--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -18,7 +18,7 @@
                 <a class="nav-link" href="/user/signin">Sign In</a>
             </li>
             <li class="nav-item hide-me">
-                <a class="nav-link" href="user/signup">Sign Up</a>
+                <a class="nav-link" href="/user/signup">Sign Up</a>
             </li>
                 
     <% } else { %>
