--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -28,17 +28,17 @@
         </div>
         <%}%>
         <label for="inputName" class="sr-only">Name</label>
-        <input type="text" id="inputName" class="form-control" placeholder="Name" name="name">
+        <input type="text" id="inputName" class="form-control form-resize" placeholder="Name" name="name">
         <br>
         <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="text" id="inputEmail" class="form-control" placeholder="Email address" name="email">
+        <input type="text" id="inputEmail" class="form-control form-resize" placeholder="Email address" name="email">
         <br>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="text" id="inputPassword" class="form-control" placeholder="Password" name="password">
+        <input type="text" id="inputPassword" class="form-control form-resize" placeholder="Password" name="password">
         <br>
-        <input type="text" id="inputAdmin" class="form-control" placeholder="admin code" name="adminCode">
+        <input type="text" id="inputAdmin" class="form-control form-resize" placeholder="admin code" name="adminCode">
         <br>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" style="font-family: fantasy;">Sign up</button>
+        <button class="btn btn-lg btn-primary btn-block form-resize" type="submit" style="font-family: fantasy;">Sign up</button>
     </form>
 </body>
 
