adjusted stylization for all pages to be more uniform

--- a/public/stylesheets/profile-style.css
+++ b/public/stylesheets/profile-style.css
@@ -1,7 +1,10 @@
 body {
+    height: 100vh;
     background-image: url('/images/inn-bg2.jpg');
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: repeat-y;
+    background-position: center;
+    font-family: 'Courgette', cursive;
 }
 
 .emp-profile{
