--- a/public/stylesheets/game-main.css
+++ b/public/stylesheets/game-main.css
@@ -4,6 +4,7 @@ body {
     background-size: 100%;
     background-repeat: no-repeat;
     background-size: cover;
+    font-family: 'Courgette', cursive;
 }
 
 .project-font {
