--- a/public/stylesheets/password-recovery.css
+++ b/public/stylesheets/password-recovery.css
@@ -30,3 +30,14 @@ body {
 .btn {
     border: 1px solid black;
 }
+
+@media (max-width: 700px) {
+    #form-area {
+        width: 65vw;
+    }
+
+    .input-resize {
+        width: 90%;
+        margin: auto;
+    }
+}
