--- a/views/user/password-recovery.ejs
+++ b/views/user/password-recovery.ejs
@@ -31,10 +31,10 @@
         <div id="form-area">
             <form class="form-signin" method="POST" action="/user/passwordrecovery">
                 <label for="inputEmail" class="sr-only">Email address</label>
-                <input type="text" id="inputEmail" name="email" class="form-control" size="50" placeholder="Email address" name="email">
+                <input type="text" id="inputEmail" name="email" class="form-control input-resize" size="50" placeholder="Email address" name="email">
                 <br>
                 <div class="text-center">
-                    <button class="btn btn-lg btn-primary" type="submit" style="font-family: fantasy;">Recover Password</button>
+                    <button class="btn btn-lg btn-primary" type="submit">Recover Password</button>
                 </div>
                 <br>
             </form>
