added media query to password reset actual page for a more mobile friendly layout

--- a/public/stylesheets/password-recovery.css
+++ b/public/stylesheets/password-recovery.css
@@ -40,4 +40,9 @@ body {
         width: 90%;
         margin: auto;
     }
+
+    .alert-resize {
+        width: 90%;
+        font-size: 0.8em;
+    }
 }
