--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,23 +1,23 @@
-
+<!-- 
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: rgba(165, 42, 42, 0.75); height: 9vh;">
     
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#tfs-navbar"
-        aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        aria-controls="tfs-navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <% if (!user) { %>
     <div class="collapse navbar-collapse" id="tfs-navbar">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav">
             <li class="nav-item active">
                 <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
             </li>
         
-            <li class="nav-item hide-me">
+            <li class="nav-item">
                 <a class="nav-link" href="/user/signin">Sign In</a>
             </li>
-            <li class="nav-item hide-me">
+            <li class="nav-item">
                 <a class="nav-link" href="/user/signup">Sign Up</a>
             </li>
                 
@@ -66,5 +66,65 @@
             <% } %>
         </ul>
     </div>
+</nav> -->
+<link rel="stylesheet" href="/stylesheets/nav-bar-responsive.css">
+<!--Navbar-->
+<nav class="navbar fixed-top navbar-light main-bg-color lighten-4">
+
+    <!-- Navbar brand -->
+    <p class="navbar-brand title-shadow mx-0 mb-0">Tales from Swiftfell<span><% if (user) { %> - Logged in as <span style="color: gold;"><%= user.profile.name %></span></span></p><% } %></p>
+
+    <!-- Collapse button -->
+    <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse"
+        data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false"
+        aria-label="Toggle navigation"><span class="dark-teal-text"><i class="fas fa-bars fa-1x"></i></span></button>
+
+    <!-- Collapsible content -->
+    <div class="collapse navbar-collapse" id="navbarSupportedContent1">
+
+        <!-- Links -->
+        <ul class="navbar-nav mr-auto">
+
+            <% if (!user) { %>
+            <li class="nav-item active">
+                <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/user/signin">Sign In</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/user/signup">Sign Up</a>
+            </li>
+            <% } else { %>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/home">Game Menu <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/game/instructions">Instructions <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a onclick="messageLaunch()" class="nav-link" href="#">Message Board <span class="sr-only">(current)</span></a>
+                </li>
+                <div class="dropdown-divider"></div>
+                <li class="nav-item">
+                    <a class="nav-link" href="/user/profile">Edit Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/user/logout">Log Out</a>
+                </li>
+
+                <% } %>
+        </ul>
+        <!-- Links -->
+
+    </div>
+    <!-- Collapsible content -->
+    <script>
+    function messageLaunch() {
+        window.open('http://tfs-forum.forumotion.com/')
+    }
+    </script>
+
 </nav>
+
 <br><br>
