added media query to mav bar so logged in text fits to one line on mobile view

--- a/public/stylesheets/nav-bar-responsive.css
+++ b/public/stylesheets/nav-bar-responsive.css
@@ -24,3 +24,9 @@ color: #004d40;
 .title-shadow {
     text-shadow: 2px 2px rgb(114, 114, 114);
 }
+
+@media (max-width: 700px) {
+    .navbar-brand {
+        font-size: 0.8em;
+    }
+}
