--- a/views/game/instructions.ejs
+++ b/views/game/instructions.ejs
@@ -6,18 +6,64 @@
 <body>
     <% include ../partials/nav %>
 
-    <br>
-    <div>
-        <h1 class="text-center" style="font-family: 'Courgette', cursive;"><u>Gameplay Instructions</u></h1>
+    <div id="main-sec1">
+        
+        <div id="title-img" class="text-center pt-3 pb-3">
+            <img src="/images/instructions.png">
+        </div>
+        
+        <div id="intro-text">
+            <p class="mb-0 pb-5 pt-3">Tales from Swiftfell is a fantasy role-playing game built in the style of a classic 16bit console video game. TFS uses the latest RPG Maker MV software, a development tool which utilizes Javascript that is simple enough for a child, but powerful enough for a developer. TFS is designed to run directly from your web browser, meaning no downloads, no installations, just adventure!</p>
+        </div>
     </div>
-    <br>
-    <div class="col text-center">
-        <p class="project-font mx-5">Tales from Swiftfell is a fantasy role-playing game built in the style of a classic 16bit console video game. TFS uses the latest RPG Maker MV software, a development tool which utilizes Javascript that is simple enough for a child, but powerful enough for a developer. TFS is designed to run directly from your web browser, meaning no downloads, no installations, just adventure!</p>
+
+    <div id="swiftfell-lore">
+        <div id="swiftfell-lore-left">
+            <h1 class="mt-5 text-shadowing">Welcome to Swiftfell</h1>
+            <br>
+            <p>(place holder test)</p>
+        </div>
+        <div id="swiftfell-lore-right">
+            <!-- Intentionally blank for background image -->
+        </div>
     </div>
-    <br>
-    <br>
+
+    <div id="basic-controls">
+        <div id="basic-controls-left">
+            <!-- Intentionally blank for background image -->
+        </div>
+        <div id="basic-controls-right">
+            <h1 class="mt-5 text-shadowing">Controls</h1>
+            <br>
+            <p class="px-3"><b>Directional Keys: </b>Move your character up, down, left, and right. By default, your character will move at walking speed.</p>
+            <br>
+            <p class="px-3"><b>Z: </b>General action key. Press Z to talk to people, interact with the environment, advance text dialogue, and confirm menu selections.</p>
+            <br>
+            <p class="px-3"><b>X: </b>Cancel or alternate action key. Press X to cancel a menu selection or to pull up the character menu when outside of battle.</p>
+            <br>
+            <p class="px-3"><b>Shift (Hold): </b>Dash. Hold down the Shift key to move at Dash speed. Note that all maps, like the Overworld, do not allow your Hero to dash.</p>
+            <br>
+            <p class="px-3"><b>Mouse Click or Screen Touch: </b>Click, or touch if playing on a mobile device, to move your Hero to the specified location, interact with an NPC or object, or confirm menu selection.</p>
+
+        </div>
+    </div>
+
+    <div id="combat-basics">
+        <div id="combat-basics-left">
+            <h1 class="mt-5 text-shadowing">Combat Basics</h1>
+            <br>
+            <p>(place holder text)</p>
+        </div>
+        <div id="combat-basics-right">
+            <!-- Intentionally left blank for background image -->
+        </div>
+    </div>
+
+    <div id="main-characters">
+        <!-- TODO: Use bootstrap media cards for this section -->
+    </div>
     
-    <ul class="list-unstyled" style="padding-left: 8em; padding-right: 15em;">
+    <!-- <ul class="list-unstyled" style="padding-left: 8em; padding-right: 15em;">
         <li class="media">
             <img class="align-self-center mr-3" src="/images/game-controller.png" width="5%" alt="Generic placeholder image">
             <div class="media-body">
@@ -45,15 +91,15 @@
         <br>
         
         
-    </ul>
+    </ul> -->
 
     <br>
     <div class="text-center">
         <a href="/home" class="btn btn-primary btn-lg">Back to Game Menu</a>
     </div>
     <br><br>
-</body>
 
-<link rel="stylesheet" href="/stylesheets/game-main.css">
+    <link rel="stylesheet" href="/stylesheets/instructions.css">
+</body>
 
 </html>
