--- a/views/game/instructions.ejs
+++ b/views/game/instructions.ejs
@@ -17,9 +17,9 @@
             </div>
         </div>
 
-        <div id="swiftfell-lore">
+        <div id="swiftfell-lore" class="bg-image">
             <div id="swiftfell-lore-left">
-                <h1 class="mt-5 text-shadowing">Welcome to Swiftfell</h1>
+                <h1 class="mt-5 text-shadowing"><u>Welcome to Swiftfell</u></h1>
                 <br>
                 <p>(place holder test)</p>
             </div>
@@ -28,31 +28,43 @@
             </div>
         </div>
 
-        <div id="basic-controls">
+        <div id="basic-controls" class="bg-image">
             <div id="basic-controls-left">
                 <!-- Intentionally blank for background image -->
             </div>
             <div id="basic-controls-right">
-                <h1 class="mt-5 text-shadowing">Controls</h1>
+                <h1 class="mt-5 text-shadowing"><u>Controls</u></h1>
                 <br>
-                <p class="px-3"><b>Directional Keys: </b>Move your character up, down, left, and right. By default, your character will move at walking speed.</p>
+                <p><b>Directional Keys: </b>Move your character up, down, left, and right. By default, your character will move at walking speed.</p>
                 <br>
-                <p class="px-3"><b>Z: </b>General action key. Press Z to talk to people, interact with the environment, advance text dialogue, and confirm menu selections.</p>
+                <p><b>Z: </b>General action key. Press Z to talk to people, interact with the environment, advance text dialogue, and confirm menu selections.</p>
                 <br>
-                <p class="px-3"><b>X: </b>Cancel or alternate action key. Press X to cancel a menu selection or to pull up the character menu when outside of battle.</p>
+                <p><b>X: </b>Cancel or alternate action key. Press X to cancel a menu selection or to pull up the character menu when outside of battle.</p>
                 <br>
-                <p class="px-3"><b>Shift (Hold): </b>Dash. Hold down the Shift key to move at Dash speed. Note that all maps, like the Overworld, do not allow your Hero to dash.</p>
+                <p><b>Shift (Hold): </b>Dash. Hold down the Shift key to move at Dash speed. Note that all maps, like the Overworld, do not allow your Hero to dash.</p>
                 <br>
-                <p class="px-3"><b>Mouse Click or Screen Touch: </b>Click, or touch if playing on a mobile device, to move your Hero to the specified location, interact with an NPC or object, or confirm menu selection.</p>
+                <p><b>Mouse Click or Screen Touch: </b>Click, or touch if playing on a mobile device, to move your Hero to the specified location, interact with an NPC or object, or confirm menu selection.</p>
 
             </div>
         </div>
 
-        <div id="combat-basics">
+        <div id="combat-basics" class="bg-image">
             <div id="combat-basics-left">
-                <h1 class="mt-5 text-shadowing">Combat Basics</h1>
+                <h1 class="mt-5 text-shadowing"><u>Combat Basics</u></h1>
                 <br>
-                <p class="px-3"><b>Turn-Based-Combat: </b>TFS utilizes a turn-based combat system. At the start of a combat turn, you select an action for each of your party members. Once all selections have been made, an agility stat calculation is made to determine the order of actions carried out.</p>
+                <p><b>Turn-Based-Combat: </b>TFS utilizes a turn-based combat system. At the start of a combat turn, you select an action for each of your party members. Once all selections have been made, an agility stat calculation is made to determine the order of actions carried out.</p>
+                <br>
+                <p><b>Attack: </b>Using your Hero's equipped weapon, attack a selected target to deal damage. Classes that have strong Attack ability are Hero and Warrior.</p>
+                <br>
+                <p><b>Guard: </b>Your Hero takes up a defensive posture and guards against any incoming physical attack that round. Typically, the damage your Hero would have taken is reduced by 50%.</p>
+                <br>
+                <p><b>Magic: </b>Select a spell to cast that round. A spell may deal damage, heal a Hero, grant a status buff, or inflict a status aliment on an enemy.</p>
+                <br>
+                <p><b>Special: </b>Every combat action your Hero takes earns him/her Technique Points. Special moves cost various Technique Points and, like spells, can have varying effects depending on the Hero's class.</p>
+                <br>
+                <p><b>Item: </b>Use an item from your inventory in combat. An item may restore a Hero's Hit Points, Magic Points, cure status aliments, or some have other effect.</p>
+                <br>
+                <p><b>Escape: </b>Allows your party to flee battle. This is best to use if your Hero's are running low on or if an enemy is too strong.</p>
             </div>
             <div id="combat-basics-right">
                 <!-- Intentionally left blank for background image -->
@@ -64,39 +76,9 @@
         </div>
     </div>
     
-    <!-- <ul class="list-unstyled" style="padding-left: 8em; padding-right: 15em;">
-        <li class="media">
-            <img class="align-self-center mr-3" src="/images/game-controller.png" width="5%" alt="Generic placeholder image">
-            <div class="media-body">
-                <h5 class="mt-0 mb-1"><u>Basic Controlls</u></h5>
-                <b>Directional Keys:</b> Move your character up, down, left, and right. By default, your character will move at walking speed.<br>
-                <b>Z:</b> General action key. Press Z to talk to people, interact with the environment, advance text dialogue, and confirm menu selections.<br>
-                <b>X:</b> Cancel or alternate action key. Press X to cancel a menu selection or to pull up the character menu when outside of battle.<br>
-                <b>Shift (Hold):</b> Dash. Hold down the Shift key to move at Dash speed.<br>
-            </div>
-        </li>
-        <br>
-        <br>
-
-        <li class="media">
-            <img class="align-self-center mr-3" src="/images/sword-icon.png" width="5%" alt="Generic placeholder image">
-            <div class="media-body">
-                <h5 class="mt-0 mb-1"><u>Combat</u></h5>
-                <p>TFS utilizes a turn-based, side-view combat system. A character's agility stat is used to determine who will act first during any round of combat. When engaged in battle, a hero has several options...</p>
-                <ul>
-                    <li><b>Attack: </b>A hero will attack with their equipped weapon, dealing damage to the enemy selected.</li>
-                </ul>
-            </div>
-        </li>
-        <br>
-        <br>
-        
-        
-    </ul> -->
-
-    <br>
+    
     <div class="text-center">
-        <a href="/home" class="btn btn-primary btn-lg">Back to Game Menu</a>
+        <a href="/home" class="btn btn-primary btn-lg border border-dark">Back to Game Menu</a>
     </div>
     <br><br>
 
