--- a/views/game/instructions.ejs
+++ b/views/game/instructions.ejs
@@ -72,7 +72,91 @@
         </div>
 
         <div id="main-characters">
-            <!-- TODO: Use bootstrap media cards for this section -->
+            <div id="main-characters-center">
+                <h1 class="mt-5 text-shadowing"><u>Main Characters</u></h1>
+                <br><br>
+                
+                <div class="media">
+                    <img class="align-self-start mr-3" src="..." alt="Generic placeholder image">
+                    <div class="media-body">
+                        <h5 class="mt-0">(Hero)</h5>
+                        <p>(place holder description 1)</p>
+                        <p>(Second text place holder area)</p>
+                    </div>
+                </div>
+                <br><br><br>
+
+                <div class="media">
+                    <img class="align-self-start mr-3" src="..." alt="Generic placeholder image">
+                    <div class="media-body">
+                        <h5 class="mt-0">Sheryl</h5>
+                        <p>(place holder description 1)</p>
+                        <p>(Second text place holder area)</p>
+                    </div>
+                </div>
+                <br><br><br>
+
+                <div class="media">
+                    <img class="align-self-start mr-3" src="..." alt="Generic placeholder image">
+                    <div class="media-body">
+                        <h5 class="mt-0">(Mother)</h5>
+                        <p>(place holder description 1)</p>
+                        <p>(Second text place holder area)</p>
+                    </div>
+                </div>
+                <br><br><br>
+
+                <div class="media">
+                    <img class="align-self-start mr-3" src="..." alt="Generic placeholder image">
+                    <div class="media-body">
+                        <h5 class="mt-0">Megan</h5>
+                        <p>(place holder description 1)</p>
+                        <p>(Second text place holder area)</p>
+                    </div>
+                </div>
+                <br><br><br>
+
+                <div class="media">
+                    <img class="align-self-start mr-3" src="..." alt="Generic placeholder image">
+                    <div class="media-body">
+                        <h5 class="mt-0">Master</h5>
+                        <p>(place holder description 1)</p>
+                        <p>(Second text place holder area)</p>
+                    </div>
+                </div>
+                <br><br><br>
+
+                <div class="media">
+                    <img class="align-self-start mr-3" src="..." alt="Generic placeholder image">
+                    <div class="media-body">
+                        <h5 class="mt-0">Soren</h5>
+                        <p>(place holder description 1)</p>
+                        <p>(Second text place holder area)</p>
+                    </div>
+                </div>
+                <br><br><br>
+
+                <div class="media">
+                    <img class="align-self-start mr-3" src="..." alt="Generic placeholder image">
+                    <div class="media-body">
+                        <h5 class="mt-0">Jager</h5>
+                        <p>(place holder description 1)</p>
+                        <p>(Second text place holder area)</p>
+                    </div>
+                </div>
+                <br><br><br>
+
+                <div class="media">
+                    <img class="align-self-start mr-3" src="..." alt="Generic placeholder image">
+                    <div class="media-body">
+                        <h5 class="mt-0">Gale</h5>
+                        <p>(place holder description 1)</p>
+                        <p>(Second text place holder area)</p>
+                    </div>
+                </div>
+                <br><br><br>
+
+            </div>
         </div>
     </div>
     
