added main character image files to instructions page

--- a/views/game/instructions.ejs
+++ b/views/game/instructions.ejs
@@ -77,7 +77,7 @@
                 <br><br>
                 
                 <div class="media">
-                    <img class="align-self-start mr-3" src="..." alt="Generic placeholder image">
+                    <img class="align-self-start mr-3" src="/images/hero-face.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <h5 class="mt-0">(Hero)</h5>
                         <p>(place holder description 1)</p>
@@ -87,7 +87,7 @@
                 <br><br><br>
 
                 <div class="media">
-                    <img class="align-self-start mr-3" src="..." alt="Generic placeholder image">
+                    <img class="align-self-start mr-3" src="/images/sheryl-face.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <h5 class="mt-0">Sheryl</h5>
                         <p>(place holder description 1)</p>
@@ -97,9 +97,9 @@
                 <br><br><br>
 
                 <div class="media">
-                    <img class="align-self-start mr-3" src="..." alt="Generic placeholder image">
+                    <img class="align-self-start mr-3" src="/images/janna-face.png" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h5 class="mt-0">(Mother)</h5>
+                        <h5 class="mt-0">Janna</h5>
                         <p>(place holder description 1)</p>
                         <p>(Second text place holder area)</p>
                     </div>
@@ -107,7 +107,7 @@
                 <br><br><br>
 
                 <div class="media">
-                    <img class="align-self-start mr-3" src="..." alt="Generic placeholder image">
+                    <img class="align-self-start mr-3" src="/images/megan-face.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <h5 class="mt-0">Megan</h5>
                         <p>(place holder description 1)</p>
@@ -117,7 +117,7 @@
                 <br><br><br>
 
                 <div class="media">
-                    <img class="align-self-start mr-3" src="..." alt="Generic placeholder image">
+                    <img class="align-self-start mr-3" src="/images/master-face.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <h5 class="mt-0">Master</h5>
                         <p>(place holder description 1)</p>
@@ -127,7 +127,7 @@
                 <br><br><br>
 
                 <div class="media">
-                    <img class="align-self-start mr-3" src="..." alt="Generic placeholder image">
+                    <img class="align-self-start mr-3" src="/images/soren-face.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <h5 class="mt-0">Soren</h5>
                         <p>(place holder description 1)</p>
@@ -137,7 +137,7 @@
                 <br><br><br>
 
                 <div class="media">
-                    <img class="align-self-start mr-3" src="..." alt="Generic placeholder image">
+                    <img class="align-self-start mr-3" src="/images/jager-face.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <h5 class="mt-0">Jager</h5>
                         <p>(place holder description 1)</p>
@@ -147,7 +147,7 @@
                 <br><br><br>
 
                 <div class="media">
-                    <img class="align-self-start mr-3" src="..." alt="Generic placeholder image">
+                    <img class="align-self-start mr-3" src="/images/gale-face.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <h5 class="mt-0">Gale</h5>
                         <p>(place holder description 1)</p>
